Unable to copy text on disabled input fields on long press gesture https://bugs.webkit.org/show_bug.cgi?id=99698

Reviewed by Ryosuke Niwa.

Text from disabled input/text should be allowed to select. Replaced isContentEditable()
with canStartSelection()

Source/WebCore:

Test: fast/events/touch/gesture/disabled-input-text-selection.html

* page/EventHandler.cpp:
(WebCore::EventHandler::handleGestureLongPress):

LayoutTests:

* fast/events/touch/gesture/disabled-input-text-selection-expected.txt: Added.
* fast/events/touch/gesture/disabled-input-text-selection.html: Added.
* platform/chromium/TestExpectations: Not Valid for chromium desktop.


Canonical link: https://commits.webkit.org/119251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133416 268f45cc-cd09-0410-ab3c-d52691b4dbfc